# arctictis

./: Cargo.toml  flake.nix
.tangled/workflows/: test.yml
examples/: version.rs  volume.rs
src/: bytes_split.rs  codec.rs  command2.rs  lib.rs  main.rs  scanner.rs
src/codec/: command.rs  misc.rs  mod.rs
src/codec/command/: macros.rs
src/command/: bc125at.rs  macros.rs  mod.rs  no_params.rs  ok_response.rs
src/command/bc125at/: backlight.rs  battery_charge_time.rs  firmware_version.rs  lcd_contrast.rs  mod.rs  model.rs  program_mode.rs  squelch.rs  volume.rs
src/command/macros/: command.rs  enum_param_response.rs  mod.rs  range_param.rs  range_response.rs  string_response.rs
