[package]
name = "uniden"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
futures-util = "0.3.31"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-serial = { version = "5.4.5", features = ["codec"] }
tokio-util = "0.7.18"
